docs/api/v2.0.0/3. Interfaces.md
Interfaces
==========

This is a complete list of available interfaces:

- [`Params\Immutable\ImmutableOptionsInterface`](Params/Immutable/ImmutableOptionsInterface.md) &mdash; Marker interface for a class that wraps an associative array for more convenient access of keys and values while the actual values are not mutable via methods like set, add, remove etc.
- [`Params\Immutable\ImmutableParametersInterface`](Params/Immutable/ImmutableParametersInterface.md) &mdash; Marker interface for a class that wraps an associative array for more convenient access of keys and values while the actual values are not mutable via methods like set, add, remove etc.
- [`Params\OptionsInterface`](Params/OptionsInterface.md) &mdash; Class that wraps an associative array for more convenient access of keys and values.
- [`Params\ParametersInterface`](Params/ParametersInterface.md) &mdash; Class that wraps an associative array for more convenient access of keys and values.
