docs/api/v3.0.0/3. Interfaces.md
Interfaces
==========

This is a complete list of available interfaces:

- [`Params\Immutable\ImmutableOptionsInterface`](Params/Immutable/ImmutableOptionsInterface.md) &mdash; Interface that defines the non-mutating methods of Options.
- [`Params\Immutable\ImmutableParametersInterface`](Params/Immutable/ImmutableParametersInterface.md) &mdash; Interface that defines the non-mutating methods of Parameters.
- [`Params\Immutable\ImmutableSettingsInterface`](Params/Immutable/ImmutableSettingsInterface.md) &mdash; Interface that defines the non-mutating methods of Settings.
- [`Params\OptionsInterface`](Params/OptionsInterface.md) &mdash; Interface that defines the non-mutating methods of Options.
- [`Params\OptionsMutableInterface`](Params/OptionsMutableInterface.md) &mdash; Defines methods for mutable options.
- [`Params\ParametersInterface`](Params/ParametersInterface.md) &mdash; Interface that defines the non-mutating methods of Parameters.
- [`Params\ParametersMutableInterface`](Params/ParametersMutableInterface.md) &mdash; Defines methods for mutable parameters.
- [`Params\ParamsInterface`](Params/ParamsInterface.md) &mdash; Interface for a class that wraps an associative array for more convenient access of keys and values while the actual values are not mutable via methods like set, add, remove etc.
- [`Params\ParamsMutableInterface`](Params/ParamsMutableInterface.md) &mdash; Interface that defines mutating methods.
- [`Params\SettingsInterface`](Params/SettingsInterface.md) &mdash; Interface that defines the non-mutating methods of Settings.
- [`Params\SettingsMutableInterface`](Params/SettingsMutableInterface.md) &mdash; Defines methods for mutable settings.
